--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -2,16 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:id="@+id/main_group">
-        <item
-            android:id="@+id/menu_export"
-            android:title="@string/menu_export_title"
-            android:icon="@drawable/ic_export"
-            app:showAsAction="ifRoom"/>
+
         <item
             android:id="@+id/menu_add_text"
             android:title="@string/menu_add_text_title"
             android:icon="@drawable/ic_add_text"
-            app:showAsAction="ifRoom"/>
+            app:showAsAction="always"/>
+        <item
+            android:id="@+id/menu_add_sticker"
+            android:title="@string/menu_add_text_title"
+            android:icon="@drawable/ic_sticker"
+            app:showAsAction="always"/>
         <item
             android:id="@+id/menu_delete_text"
             android:title="@string/menu_delete_text_title"
@@ -22,6 +23,11 @@
             android:title="@string/menu_share_title"
             android:icon="@drawable/ic_share"
             app:showAsAction="always"/>
+        <item
+            android:id="@+id/menu_export"
+            android:title="@string/menu_export_title"
+            android:icon="@drawable/ic_export"
+            app:showAsAction="never"/>
         <item
             android:id="@+id/menu_change_image"
             android:title="@string/menu_change_image_title"
