--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -29,24 +29,25 @@
             android:icon="@drawable/ic_export"
             app:showAsAction="never"/>
         <item
+            android:id="@+id/menu_rotate"
+            android:title="@string/menu_rotate_title"
+            app:showAsAction="never"/>
+
+        <item
             android:id="@+id/menu_change_image"
             android:title="@string/menu_change_image_title"
-            android:icon="@drawable/ic_delete"
             app:showAsAction="never"/>
         <item
-            android:id="@+id/menu_settings"
+            android:id="@+id/menu_gallery"
             android:title="@string/menu_setting_title"
-            android:icon="@drawable/ic_delete"
             app:showAsAction="never"/>
         <item
             android:id="@+id/menu_contact_us"
             android:title="@string/menu_contact_us"
-            android:icon="@drawable/ic_delete"
             app:showAsAction="never"/>
         <item
             android:id="@+id/menu_rate"
             android:title="@string/menu_rate"
-            android:icon="@drawable/ic_delete"
             app:showAsAction="never"/>
     </group>
 
