--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="gridview_item_dimen">70dp</dimen>
     <dimen name="button_height">50dp</dimen>
     <dimen name="button_width">130dp</dimen>
+    <dimen name="tab_padding">3dp</dimen>
 </resources>
