--- a/app/src/main/res/layout/text_fragment.xml
+++ b/app/src/main/res/layout/text_fragment.xml
@@ -22,7 +22,7 @@
                 <ImageView
                     android:id="@+id/image_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="match_parent"/>
                 <RelativeLayout
                     android:id="@+id/layout_floatview"
                     android:layout_width="match_parent"
@@ -41,7 +41,6 @@
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_alignParentBottom="true"
-
             android:background="#2f2c2c">
             <LinearLayout
                 android:layout_width="match_parent"
